# proekt_mmvb_analiz

./: README.md
код_программы_на_си/: запуск_сборки.sh
код_программы_на_си/ускорение_бд_postgresql/: CMakeLists.txt
код_программы_на_си/ускорение_бд_postgresql/.codelite/: исходники_ммвб_си-postgres.tags  исходники_ммвб_си.session  ускорение_бд_postgresql-postgres.tags  ускорение_бд_postgresql.session
код_программы_на_си/ускорение_бд_postgresql/.ctagsd/: ctagsd.json  file_list.txt
код_программы_на_си/ускорение_бд_postgresql/а_main_program/: CMakeLists.txt  extern_активация.h  main.c  main.h  глобальные_переменные.h
код_программы_на_си/ускорение_бд_postgresql/б1_блок_нагрузка_пк/: CMakeLists.txt  нагрузка_пк.c  нагрузка_пк.h
код_программы_на_си/ускорение_бд_postgresql/б2_блок_предстарт_наполнения/: CMakeLists.txt  предстарт_наполнение.c  предстарт_наполнение.h
код_программы_на_си/ускорение_бд_postgresql/бд_бд_запросы/: CMakeLists.txt  запросы_к_бд.c  запросы_к_бд.h  запросы_к_бд_предторги.c  запросы_к_бд_штатные_торги.c
код_программы_на_си/ускорение_бд_postgresql/н_настр_ключи_при_запуске/: CMakeLists.txt  входные_данные.c  входные_данные.h
код_программы_на_си/ускорение_бд_postgresql/о_ошибки_обработка/: CMakeLists.txt  ошибки_обработка.c  ошибки_обработка.h
код_программы_на_си/ускорение_бд_postgresql/п_потоки_независимые/: CMakeLists.txt  потоки.c  потоки.h
код_программы_на_си/ускорение_бд_postgresql/с_системные_команды/: CMakeLists.txt  системные_функции.c  системные_функции.h
код_программы_на_си/ускорение_бд_postgresql/ф_файлы_внешние/: CMakeLists.txt  файлы_действия.c  файлы_действия.h
